force-app/main/default/objects/Configuration__c/fields/DisplayMode__c.field-meta.xml
<CustomField>
    <fullName>DisplayMode__c</fullName>
    <label>Display Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DesignMode</valueSetName>
    </valueSet>
</CustomField>