force-app/main/default/objects/Configuration__c/fields/InitApexName__c.field-meta.xml
<CustomField>
    <fullName>InitApexName__c</fullName>
    <label>Init Apex Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>