force-app/main/default/objects/Configuration__c/fields/IsCUDActions__c.field-meta.xml
<CustomField>
    <fullName>IsCUDActions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you need to display standard actions (create, edit, delete) based on user&apos;s permission?</inlineHelpText>
    <label>Is CUD Actions</label>
    <type>Checkbox</type>
</CustomField>