force-app/main/default/objects/Configuration__c/fields/IsInlineEdit__c.field-meta.xml
<CustomField>
    <fullName>IsInlineEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is it possible to edit data directly in the datatable?</inlineHelpText>
    <label>Is Inline Edit</label>
    <type>Checkbox</type>
</CustomField>