force-app/main/default/objects/Configuration__c/fields/IsLazyDataLoad__c.field-meta.xml
<CustomField>
    <fullName>IsLazyDataLoad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lazy Data Load</label>
    <type>Checkbox</type>
</CustomField>