force-app/main/default/objects/Configuration__c/fields/PostActionApexName__c.field-meta.xml
<CustomField>
    <fullName>PostActionApexName__c</fullName>
    <label>Post-Action Apex Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>