force-app/main/default/objects/Configuration__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <inlineHelpText>In the case the SObject Type is filled (for example, Case), the data can only be of this type. Otherwise, the data can be any, defined in the Init Apex Class.</inlineHelpText>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>